<resources>
    <string name="app_name">PointMobileProject</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="btnGetList">GetList</string>
    <string name="previous">Previous</string>

    <string name="first_fragment_start_text">The file has not been uploaded yet.</string>
    <string name="upload_sucess_text">The file has been uploaded.</string>
    <string name="upload_failed_text">The file failed to upload.</string>
    <string name="input_file_tilte">File Title</string>
    <string name="hint_file_title">Please enter a file title</string>
    <string name="input_file_content">File Content</string>
    <string name="hint_file_content">Please enter a file Content</string>

    <string name="file_name">File Name</string>
    <string name="file_info">File Info</string>

    <string name="data_loading">Data Loading</string>
</resources>