<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_file_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_file_tilte"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/editTextFileTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_file_title"
        app:layout_constraintTop_toBottomOf="@id/textview_file_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textview_file_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_file_content"
        app:layout_constraintTop_toBottomOf="@id/editTextFileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/editTextFileContent"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:hint="@string/hint_file_content"
        app:layout_constraintTop_toBottomOf="@id/textview_file_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_start_text"
        app:layout_constraintTop_toBottomOf="@id/editTextFileContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnGetList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnGetList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnUpload"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="15dp"
        />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="btnUpload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGetList"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="35dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
